[template] Upgraded to latest gradle and Java 21
* Upgraded most of other dependencies, before spring 3